manifests/04-argo-rollout-metrics/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 04-argo-rollout-metrics
  labels:
    istio-injection: enabled
