manifests/04-argo-rollout-metrics/k8s/03-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: myapp-rollout-metrics-gateway
  namespace: 04-argo-rollout-metrics
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "myapp.04.local"
